feat: add palindrome string checker functionality

--- a/2/index.html
+++ b/2/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Palindrome Checker</h1>
 
-    <input type="text" placeholder="Type something ...">
-    <button>Check</button>
+    <input type="text" id="input" placeholder="Type something ...">
+    <button onclick="check()">Check</button>
   
     <script src="index.js"></script>
 </body>
